# aoc2021

./: LICENSE  README.md  meson.build  meson_options.txt
days/day1/: input.txt  meson.build  solution.cc
days/day2/: meson.build  solution.cc
days/day3/: meson.build  solution.cc
